--- a/doc/src/main/ch4_quacompliance.tex
+++ b/doc/src/main/ch4_quacompliance.tex
@@ -282,25 +282,57 @@ result: {
 
 \subsection{Registering a service}
 
-TODO: more explanations
+Listing \ref{lst:quacompliance} shows a registration message of a qua-compliant service named \emph{RandomQUA}. In the following, we will briefly reiterate what each field indicates.
+
+\begin{itemize}
+  \item Lines 1-5: A service of name \emph{RandomQUA} is registered. The fields are not subject to any change by qua-compliance. See Section \ref{ch:serviceapi}, for how to register a generic service.
+  \item Line 6: The field \texttt{qua-view-compliant} indicates that the service is qua-view-compliant.
+  \item Lines 7-14 specify the service's inputs
+    \begin{itemize}
+      \item The field \texttt{ScID} is optional, it is used to specify the scenario on which the service is asked to operate. Since not every execution mode requires such a scenario, the field is optional.
+      \item The execution mode \texttt{mode} is obligatory and, as can be noted from the constraints in lines 23-33, takes the four execution mode names \emph{points, objects, scenario} and \emph{new}.
+      \item The field \texttt{points} is an optional binary attachment that is required when the service is executed in the \emph{points}-execution-mode
+      \item The field \texttt{objIds} is an optional binary attachment specifying the object ids when the service is executed in the \emph{objects}-execution-mode
+      \item The other fields are service-specific fields, in this case two required numbers. Generally, a service can add an arbitrary amount of additional inputs for the service.
+    \end{itemize}
+  \item Lines 15-22 specify the service's outputs
+    \begin{itemize}
+      \item The field \texttt{unit} gives the unit of the service result
+      \item The mutually exclusive fields \texttt{value} or \texttt{values} contain the service's result value(s).
+        If the service operated in the \emph{points} or \emph{objects} execution modes.
+        The field \emph{values} will contain a binary attachment in which the result values are encoded as floating point numbers.
+
+        On the other hand, if the service operated in the \emph{scenario}-mode, the field \texttt{value} will contain the result for the entire scenario.
+      \item The fields \texttt{scenario\_id}, \texttt{timestamp\_accessed} and \texttt{timestamp\_modified} describe the outputs if the service has been run in the \emph{new}-mode. They describe the scenario id, its version number (timestamp) when it was accessed and its version number after it has been modified, respectively.
+    \end{itemize}
+  \item Lines 23-33 specify the service's input constraints
+    \begin{itemize}
+      \item Lines 24-26: The input argument ScID must be an integer
+      \item Line 27: The mode must be either \emph{points}, \emph{objects}, \emph{scenario} or \emph{new}
+      \item Line 28-32: The number field \texttt{some\_other\_input} must be within the domain $[42,100] \cap \mathbb{Z}$.
+    \end{itemize}
+  \item Lines 34-52 give an example of a valid call of the service. In this case, the service is asked to operate on scenario no. $123$. The service is executed in mode \emph{points} length of the \emph{points}-attachment is 36 bytes which corresponds to 3 three-dimensional points. Finally, the two additional input arguments \texttt{some\_other\_input} and \texttt{some\_4th\_input} are set to with parameters 42 and 13.37, respectively.
+\end{itemize}
+
+\newpage
 
 \begin{lstlisting}[caption={Registering a QUA-compliant service}, label={lst:quacompliance}]
 {
   run : "RemoteRegister",
-  description : "I am a random service", // obligatory
+  description : "I am a random service",
   serviceName : "RandomQUA",
-  callID : 1, // obligatory
-  qua-view-compliant : true, // obligatory
+  callID : 1,
+  qua-view-compliant : true,
   inputs : {
-    OPT geomID : number, // obligatory for all modes except "new"
-    mode : string, // obligatory
-    points : attachment,
+    OPT ScID : number,
+    mode : string,
+    OPT points : attachment,
+    OPT objIds : attachment,
     some other input : number,
     some 4th input : number
   },
   outputs : {
     unit : string,
-    mode : string,
     XOR value : number,
     XOR values : attachment,
     OPT scenario_id : long,
@@ -308,6 +340,10 @@ TODO: more explanations
     OPT timestamp_modified : int
   }
   constraint : {
+      ScID : {
+        integer : true
+      }
+      mode : ["points", "objects", "scenario", "new"],
       some other input : {
           min : 42,
           max : 100,
@@ -317,12 +353,12 @@ TODO: more explanations
   exampleCall : {
     {
       run : "RandomQUA",
-      geomID : 123,
+      ScID : 123,
       mode : "points",
       points : {
         format : "float32 array",
         attachment {
-          length : 100,
+          length : 36,
           position : 1,
           checksum : "2929bead3ee3cf55113ec9aade2b6add"
         }
